syntax = "proto3";

import "ingredients.proto";
import "vendors.proto";

option java_package = "javagrpc";

service foodSupplier{
    rpc getVendorsByIngredient(Ingredient)  returns (Vendors);
}