syntax = "proto3";

import "ingredients.proto";
import "vendors.proto";

option java_package = "javagrpc";

service foodVendor{
    rpc getIngredientFromVendor(VendorIngredientData)  returns (IngredientMap);
}
	
message VendorIngredientData
{
	Vendor vendor = 1;
	Ingredient ingredient = 2;
}
